# AggCirclesHaiku

./: CMakeLists.txt  LICENSE  README.md  Resources.rdef
src/: AGG.cpp  AGG.h  AGGApplication.cpp  AGGApplication.h  AGGView.cpp  AGGView.h  AGGWindow.cpp  AGGWindow.h  Circles.cpp  Circles.h  ControlContainer.h  CtrlContainer.h  Main.cpp  PixelFormats.h  PlatformSpecific.cpp  PlatformSpecific.h  PlatformSupport.cpp  PlatformSupport.h  Predeclaration.h  Util.cpp  Util.h  agg_platform_support.h
